# movevm

./: .gitignore  Makefile  README.md  go.mod  lib.go
api/: api.go  bindings.h  callbacks.go  callbacks_cgo.go  lib.go  libmovevm.dylib  link_mac.go  link_muslc.go  memory.go  mocks.go  version.go
builders/: README.md
builders/guest/: build_linux.sh  build_macos.sh  build_muslc.sh
cmd/demo/: main.go
contracts/readme/: Move.toml  args.exp  args.txt
contracts/readme/sources/: Account.move  Caller.move  Test.move  debug_script.move  test_script.move
libmovevm/: Cargo.toml  bindings.h
libmovevm/src/: api.rs  call.rs  calls.rs  lib.rs  publish.rs  version.rs
libmovevm/src/adapt/: db.rs  goapi.rs  iterator.rs  mod.rs  querier.rs  storage.rs
libmovevm/src/adapt/error/: go.rs  rust.rs
libmovevm/src/adapt/vm/: types.rs
libmovevm/src/api/: mod.rs  publish.rs  run.rs  view.rs
libmovevm/src/api/utils/: mod.rs  on_disk_state_view.rs  package_context.rs
libmovevm/src/gas/: mod.rs
libmovevm/src/natives/: account.rs  mod.rs
libmovevm/src/stdvm/: binary.rs  coin.rs  mod.rs  serde.rs
libmovevm/src/stdvm/errors/: mod.rs  std_error.rs  system_error.rs
libmovevm/src/stdvm/math/: decimal.rs  decimal256.rs  isqrt.rs  uint128.rs  uint256.rs  uint512.rs  uint64.rs
libmovevm/src/stdvm/query/: bank.rs  mod.rs  wasm.rs
libmovevm/src/stdvm/result/: mod.rs  system_result.rs
libmovevm/src/wrap/: cli.rs  mod.rs
libmovevm/src/wrap/commands/: doctor.rs  generate.rs  mod.rs  publish.rs  run.rs  view.rs
libmovevm/src/wrap/utils/: mod.rs  on_disk_state_view.rs  package_context.rs
types/: msg.go  queries.go
